--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 <body>
 
 <div class="container" id="container">
-	<h1>Blog Posts</h1>
+    <h1>Infinite Scroll Example Page</h1>
+    <p>
+        This page is an example of an infinite scrolling "blog feed",
+        accompanying the article <a href="*">How to Scrape Infinite Scrolling Websites Using Puppeteer</a> on <a href="scrapingbee.com">scrapingBee.com</a>.
+    </p>
 <!-- 	<div class="blog-post">
 		<h2 class="title">Blog post title</h2>
 		<p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident quod debitis in repellat veritatis minus ab ex maiores itaque quis.</p>
