--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>Infinite Scroll Example Page</h1>
     <p>
         This page is an example of an infinite scrolling "blog feed",
-        accompanying the article <a href="*">How to Scrape Infinite Scrolling Websites Using Puppeteer</a> on <a href="scrapingbee.com">scrapingBee.com</a>.
+        accompanying the article <a href="https://www.scrapingbee.com/blog/infinite-scroll-puppeteer/">How to Scrape Infinite Scrolling Websites Using Puppeteer</a> on <a href="https://www.scrapingbee.com">scrapingBee.com</a>.
     </p>
 <!-- 	<div class="blog-post">
 		<h2 class="title">Blog post title</h2>
